# 2nd-place-contrails

./: .gitignore  Learning.md  README.md  base_train.py  config.json  pyproject.toml  requirements_vastai.txt  train.py
.github/: copilot-instructions.md
doc/: baseline_models.md  bicubic_interpolation.md  coat.mdx  coat_ulstm.mdx  fast_ai.mdx  pixel_shuffle_upscaling.mdx  prepare_data.mdx  understanding_challenges.md  writeups.mdx
experiments/: history.csv  threshold_curve.csv
run/: submit.py  train_and_stop.sh
src_inference1/: BaseCoatULSTM.py  CoaT_Simple.py  CoaT_U.py  CoaT_ULSTM.py  ResNet18_Simple.py  ResNet18_U.py  ResNet18_ULSTM.py  data.py  utils.py
tools/: download_coat_weights.py  download_resnet_weights.py  upload_code.sh  upload_data.sh  upload_model.sh
