[project]
name = "2nd-place-contrails"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.9"
dependencies = [
    "albumentations",
    "einops",
    "fastai",
    "fastcore",
    "fastxtend",
    "japanize-matplotlib>=1.1.3",
    "kornia",
    "mmcv",
    "numpy<2",
    "opencv-python",
    "pandas",
    "segmentation-models-pytorch",
    "tifffile",
    "timm>=0.9.0",
    "torch",
    "wandb",
]
